--- a/V.html
+++ b/V.html
@@ -60,6 +60,25 @@
             color: #ffffff;
             line-height: 1.5;
         }
+
+        .new-verse-btn {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            padding: 12px 24px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 2px solid #ffffff;
+            color: #ffffff;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border-radius: 5px;
+        }
+
+        .new-verse-btn:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
@@ -71,12 +90,14 @@
     </div>
 
     <div class="datext">
-        <p>"In the world you will have tribulation. But take heart; I have overcome the world."</p>
+        <p id="verseText">"In the world you will have tribulation. But take heart; I have overcome the world."</p>
     </div>
 
     <div class="bottom-left-text">
-        <p>John 16:33</p>
+        <p id="verseRef">John 16:33</p>
     </div>
+
+    <button class="new-verse-btn" onclick="showRandomVerse()">New Verse</button>
 
     <script>
        const verses = [
@@ -84,20 +105,47 @@
     { text: '"The Lord is my shepherd; I shall not want."', ref: 'Psalm 23:1' },
     { text: '"For God so loved the world that he gave his one and only Son."', ref: 'John 3:16' },
     { text: '"I can do all things through Christ who strengthens me."', ref: 'Philippians 4:13' },
-    { text: '"Be still, and know that I am God."', ref: 'Psalm 46:10' },  // <-- Added comma here!
-    { text: '"But I say unto you, That whosoever looketh on a woman to lust after her hath committed adultery with her already in his heart"', ref: 'Matthew 5:28' },  // <-- Also fixed typo: "hear" -> "heart"
-    { text: '"Flee from sexual immorality. Every other sin a person commits is outside the body, but the sexually immoral person sins against his own body"', ref: '1 Corinthians 6:18'}
+    { text: '"Be still, and know that I am God."', ref: 'Psalm 46:10' },
+    { text: '"But I say unto you, That whosoever looketh on a woman to lust after her hath committed adultery with her already in his heart"', ref: 'Matthew 5:28' },
+    { text: '"Flee from sexual immorality. Every other sin a person commits is outside the body, but the sexually immoral person sins against his own body"', ref: '1 Corinthians 6:18'},
+    { text:'"We know that our old self was crucified with him in order that the body of sin might be brought to nothing, so that we would no longer be enslaved to sin. For one who has died has been set free from sin"', ref: 'Romans 6:6-7' },
+    { text: '"Jesus said, i am the way, the truth, and life."', ref: 'john 14:6'},
+    { text: '"Then you will know the truth, and the truth will set you free"', ref: 'john 8:32'},
+    { text: '"Be kind and compassionate to one another, forgiving each other, just as in Christ God forgave you "', ref: 'Ephesians 4:32' },
+    { text: '"For I know the plans I have for you," declares the Lord, "plans to prosper you and not to harm you, plans to give you hope and a future."', ref: 'Jeremiah 29:11'},
+    { text: '"For if you forgive other people when they sin against you, your heavenly Father will also forgive you. But if you do not forgive others their sins, your Father will not forgive your sins."', ref: 'Matthew 6:14-15' },
+    { text: '"I have made a covenant with my eyes; how then could I gaze at a virgin?"', ref: 'Job 31:1' },
+    { text: '"Trust in the Lord with all your heart and lean not on your own understanding; in all your ways submit to him, and he will make your paths straight."', ref: 'Proverbs 3:5-6' },
+    { text: '"I have made a covenant with my eyes; how then could I gaze at a virgin?"', ref: 'Job 31:1' },
+    { text: '"But the fruit of the Spirit is love, joy, peace, forbearance, kindness, goodness, faithfulness, gentleness and self-control. Against such things there is no law."', ref: 'Galatians 5:22-23' }, 
+    { text: '"I am the vine; you are the branches. If you remain in me and I in you, you will bear much fruit; apart from me you can do nothing."', ref: 'John 15:5' },
+    { text: '"Never will I leave you; never will I forsake you."', ref: 'Hebrews 13:5' },
+    { text: '"Pride goes before destruction, a haughty spirit before a fall."', ref: 'Proverbs 16:18' },
+    { text: '""A tranquil heart gives life to the flesh, but envy makes the bones rot," highlighting its destructive nature.', ref: 'Proverbs 14:30' },
+    { text: '"Do not join those who drink too much wine or gorge themselves on meat, for the drunkards and gluttons become poor, and drowsiness clothes them in rags."', ref: 'Proverbs 23:20-21' },
+    { text: '"So we fix our eyes not on what is seen, but on what is unseen, since what is seen is temporary, but what is unseen is eternal."', ref: '2 Corinthians 4:18' },
+    { text: '"A slack hand causes poverty, but the hand of the diligent makes riches."', ref: 'Proverbs 10:4' },
+    { text: '"The fear of the Lord is the beginning of wisdom, and knowledge of the Holy One is understanding."', ref: 'Proverbs 9:10' },
+    { text: '"Commit to the Lord whatever you do, and he will establish your plans."', ref: 'Proverbs 16:3' }
+    
         ];  
 
         function showRandomVerse() {
             const randomIndex = Math.floor(Math.random() * verses.length);
             const verse = verses[randomIndex];
             
-            document.querySelector('.datext p').textContent = verse.text;
-            document.querySelector('.bottom-left-text p').textContent = verse.ref;
+            document.getElementById('verseText').textContent = verse.text;
+            document.getElementById('verseRef').textContent = verse.ref;
         }
 
         showRandomVerse();
     </script>
 </body>
 </html>
+```
+
+Then save and push again:
+```
+git add V.html
+git commit -m "added new verse button"
+git push
